# research-ml-inference

./: .gitignore  AntiFraud.cpp  AntiFraud.h  CMakeLists.txt  main.cpp  schema_generated.h  zhelpers.hpp
bench/zmq/: CMakeLists.txt  client.cpp  server.cpp
data/: Inference Proposal.excalidraw
flatbuffers/: schema.fbs
metrics/: main.ipynb  pyproject.toml
rust/: Cargo.toml
rust/crates/cli/: Cargo.toml
rust/crates/cli/src/: main.rs
rust/crates/ipc/: Cargo.toml
rust/crates/ipc/src/: lib.rs  requester.rs
rust/crates/schema/: Cargo.toml
rust/crates/schema/src/: lib.rs
rust/crates/server/: Cargo.toml
rust/crates/server/src/: main.rs
rust/src/: extended_request_reply_broker.rs  main.rs  schema_generated.rs  subscriber.rs
src/: AntiFraud.cpp  AntiFraud.h  CliArgParser.cpp  CliArgParser.h
