[tool.poetry]
name = "metrics"
version = "0.1.0"
description = ""
authors = ["Elvis S. <elvissabanovic3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
polars = "^0.19.19"
pandas = "^2.1.4"
ipympl = "^0.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
