[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "publisher"
path = "./src/main.rs"

[[bin]]
name = "subscriber"
path = "./src/subscriber.rs"

[dependencies]
serde_derive = "1.0.193"
serde = "1.0.193"
serde_json = "1.0.108"
zmq = "0.10.0"
rand = "0.8.5"
tokio = { version = "1.34.0", features = ["full"] }
rouille = "3.6.2"

[dependencies.uuid]
version = "1.6.1"
features = ["v4", "fast-rng", "macro-diagnostics"]