[package]
name = "ipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq.workspace = true
flatbuffers.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4.4.11", features = ["derive"] }