[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ipc = { path = "../ipc", version = "0.1.0" }

tokio = { version = "1.35.0", features = ["full"] }
axum = {version = "0.7.2", features = ["tokio"]}
anyhow = "1.0.75"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
prometheus-client = "0.22.0"
clap = {  version = "4.4.11", features = ["derive"] }